--- a/rider_app/pubspec.yaml
+++ b/rider_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   firebase_database: ^8.1.0
+  flutter_screenutil: ^5.0.0+2
 
 dev_dependencies:
   flutter_test:
